test/statements/select/multipleOtherwise.good
multipleOtherwise.chpl:4: error: select has multiple otherwise clauses
